// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoGrid deve aceitar as GridProps 1`] = `
.emotion-0 {
  margin: 0.5rem 1rem;
}

@media (max-width:1280px) {
  .emotion-0 {
    margin: 0.25rem 0.5rem;
  }
}

.emotion-1 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  margin-left: -1rem;
  margin-right: -1rem;
  height: 100%;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (max-width:1280px) {
  .emotion-1 {
    margin-left: -0.5rem;
    margin-right: -0.5rem;
  }
}

<div
  class="emotion-1"
>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
  </div>
</div>
`;

exports[`AutoGrid deve renderizar corretamente 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -1rem;
  margin-right: -1rem;
  height: 100%;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (max-width:1280px) {
  .emotion-6 {
    margin-left: -0.5rem;
    margin-right: -0.5rem;
  }
}

.emotion-0 {
  margin: 0.5rem 1rem;
  width: calc((100% / 12 * 4) - 2rem);
}

@media (max-width:1280px) {
  .emotion-0 {
    margin: 0.25rem 0.5rem;
  }
}

@media (max-width:1280px) {
  .emotion-0 {
    width: calc((100% / 12 * 4) - 1rem);
  }
}

.emotion-3 {
  margin: 0.5rem 1rem;
  width: calc((100% / 12 * 12) - 2rem);
}

@media (max-width:1280px) {
  .emotion-3 {
    margin: 0.25rem 0.5rem;
  }
}

@media (max-width:1280px) {
  .emotion-3 {
    width: calc((100% / 12 * 12) - 1rem);
  }
}

<div
  class="emotion-6"
>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      2
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      3
    </span>
  </div>
  <div
    class="emotion-3"
  >
    <span>
      4
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      5
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      6
    </span>
  </div>
</div>
`;
